k8s-configs/webhook.yml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: spire-sidecar-injector
webhooks:
  - name: sidecar-injector.spiffe.io
    clientConfig:
      url: "https://192.168.99.1:9999/inject"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1ekNDQWMrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwdGFXNXAKYTNWaVpVTkJNQjRYRFRFM01ETXdNakU0TlRVd09Gb1hEVEkzTURJeU9ERTROVFV3T0Zvd0ZURVRNQkVHQTFVRQpBeE1LYldsdWFXdDFZbVZEUVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBSytnCjNseUNGYXhPNHF0ZUFUYzE4dENELzhPTFdjREprN3RTUzhNdXF6c2tUNW5nRnQvcjFoZUZkY1duRVB1QnJCNU8KelJ4eC9KblhMQnRwcndnaDdYdzFZR1hwUXNEb3BZWmw2a3lwZ01hdjB2TlpIbjJBNmNUWW5udmRiME1DRkVMVQpjYnBwaDczMWI [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Fail
